# SystemsArchitecture

./: .gitignore  Dockerfile  README.md  docker-compose.yml  moingo-init.sh
.devcontainer/: devcontainer.json
lab1/: arch.dsl  workspace.dsl  workspace.json
lab1/.devcontainer/: devcontainer.json
lab2/: CMakeLists.txt  Dockerfile  README.MD  build.sh  debug.sh  docker-compose.yml  gen.py  index.yaml  main.cpp  start.sh
lab2/database/: database.cpp  database.h  user.cpp  user.h
lab2/postman/: lab2_user_server.postman_collection.json
lab2/user_server/: user_server_application.cpp
lab2/user_server/user_request_handler/: user_handler.cpp  user_handler.h
lab2/user_server/user_request_handler_factory/: user_handler_factory.cpp  user_handler_factory.h
lab3/: CMakeLists.txt  README.MD  build.sh  docker-compose.yml  gen_messages.py  gen_posts.py  main.cpp  message.yaml  message_app_Dockerfile  post.yaml  post_app_Dockerfile  start_and_gen_messages.sh  start_and_gen_posts.sh
lab3/config/: config.cpp  config.h
lab3/database/: database.cpp  database.h  message.cpp  message.h
lab3/message_app/: start_and_gen.sh
lab3/message_request_handler/: message_handler.cpp
lab3/message_request_handler_factory/: message_handler_factory.h
lab3/message_server/: message_server_application.cpp  message_server_application.h
lab3/mongo_database/: message.cpp  message.h  mongo_database.cpp  mongo_database.h  post.cpp
lab3/post_app/: CMakeLists.txt  start.sh  start_and_gen.sh
lab3/postman/: lab3_message_server.postman_collection.json  lab3_post_server.postman_collection.json
lab4/: README.MD  docker-compose.yml  message_app_Dockerfile  post_app_Dockerfile  start_and_gen_messages.sh  start_and_gen_posts.sh  start_and_gen_users.sh  user_app_Dockerfile
lab4/auth_helper/: auth_helper.cpp  auth_helper.h  private  public
lab4/config/: config.cpp  config.h
lab4/database/: user.cpp  user.h
lab4/message_app/: CMakeLists.txt  start.sh
lab4/message_app/message_server/: message_server_application.cpp
lab4/message_app/message_server/message_request_handler/: message_handler.cpp  message_handler.h
lab4/mongo_database/: message.cpp  message.h  mongo_database.cpp
lab4/post_app/: build_message_server.sh
lab4/postman/: lab4_message_server.postman_collection.json  lab4_post_server.postman_collection.json  lab4_user_server.postman_collection.json
lab4/user_app/: CMakeLists.txt  Dockerfile  docker-compose.yml  start.sh  start_and_gen.sh
lab5/: README.MD  api_gateway_Dockerfile  docker-compose.yml  message_app_Dockerfile  perfomance.md  post.yaml  post_app_Dockerfile  start_and_gen_messages.sh  start_and_gen_posts.sh  start_and_gen_users.sh  start_api_gateway.sh  start_users.sh  user_app_Dockerfile
lab5/api_gateway/: CMakeLists.txt  api_gateway_application.cpp  api_gateway_application.h
lab5/auth_helper/: auth_helper.cpp  auth_helper.h
lab5/cache/: cache.cpp  cache.h
lab5/config/: config.cpp  config.h
lab5/database/: database.cpp  database.h  user.cpp
lab5/message_app/: gen.py  main.cpp
lab5/mongo_database/: mongo_database.cpp
lab5/post_app.old/: CMakeLists.txt  gen.py  main.cpp  start.sh
lab5/post_app.old/post_server/post_request_handler/: post_handler.cpp
lab6/: README.MD  api_gateway.yaml  api_gateway_Dockerfile  docker-compose.yml  message.yaml  message_app_Dockerfile  perfomance.md  post_app_Dockerfile  start_and_gen_messages.sh  start_and_gen_posts.sh  start_and_gen_users.sh  start_api_gateway.sh  start_users.sh  user.yaml  user_app_Dockerfile
lab6/api_gateway/: CMakeLists.txt  api_gateway_application.h  main.cpp
lab6/api_gateway/api_gateway_request_handler/: api_gateway_handler.cpp  api_gateway_handler.h
lab6/api_gateway/api_gateway_request_handler_factory/: api_gateway_factory.h
lab6/api_gateway/circuit_breaker/: circuit_breaker.cpp  circuit_breaker.h
(+54 files in other folders)
